WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135036
[iOS][WK2] Fix the updateVisibleContentRects synchronization for load after
r171154
https://bugs.webkit.org/show_bug.cgi?id=135036
Summary
[iOS][WK2] Fix the updateVisibleContentRects synchronization for load after r...
Benjamin Poulain
Reported
2014-07-17 18:12:58 PDT
[iOS][WK2] Fix the updateVisibleContentRects synchronization for load after
r171154
Attachments
Patch
(1.67 KB, patch)
2014-07-17 18:14 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-07-17 18:14:40 PDT
Created
attachment 235105
[details]
Patch
Benjamin Poulain
Comment 2
2014-07-17 18:17:15 PDT
Comment on
attachment 235105
[details]
Patch Clearing flags on attachment: 235105 Committed
r171209
: <
http://trac.webkit.org/changeset/171209
>
Benjamin Poulain
Comment 3
2014-07-17 18:17:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug