[iOS][WK2] Fix the updateVisibleContentRects synchronization for load after r171154 https://bugs.webkit.org/show_bug.cgi?id=135036

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-07-17
Reviewed by Dan Bernstein.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::updateVisibleContentRects):
I forgot to update one of the condition after changing from lastTransaction to next transaction
in r171154.


Canonical link: https://commits.webkit.org/152950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171209 268f45cc-cd09-0410-ab3c-d52691b4dbfc